# Online-Course-Registration

./: MANIFEST.in  README.md  app.py  cmsc495project-0.0.2-py3-none-any.whl  dump.rdb  initial_course_data.json  initial_semester_dates.json  initial_student_user_data.json  package-lock.json  pyproject.toml  requirements.txt
Online-Course-Registration/: pyproject.toml
Online-Course-Registration/database/: database.db
database/: database.db
docs/: README.md
src/: app.py  package-lock.json  tailwind.config.js
src/init_data/: initial_student_user_data.json
src/static/css/: register.css  styles.css
src/templates/: additional_info.html  base.html  change_password.html  course_details.html  index.html  landing.html  login.html  navbar_base.html  register.html  registered_classes.html  registered_courses.html  registration_log.html  view_cart.html  view_courses.html
tests/: test_app.py
