[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmsc495project"
version = "0.0.2"
description = "This is our CMSC495 Project: Online Course Registration"
authors = [
    { name = "Alex Sigba", email = "asigba@student.umgc.edu" },
    { name = "Giavani Dickey", email = "gdickey2@student.umgc.edu" },
    { name = "Samia Celi", email = "sceli@student.umgc.edu" },
    { name = "Benjamin Rinehart", email = "brinehart1@student.umgc.edu" },
    { name = "Maggie Ours", email = "mours@student.umgc.edu" }
]
dependencies = [
    "Flask==3.0.3",
    "Flask-Bcrypt==1.0.1",
    "Flask-Login==0.6.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.2",
    "WTForms==3.2.1",
    "beautifulsoup4==4.12.3",
    "soupsieve==2.6"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = [
    "templates/*",  # Include all template files
    "static/*"      # Include all static files
]

[project.scripts]
cmsc495 = "src.app:main"
